--- a/content/resources/1-010f08-th.md
+++ b/content/resources/1-010f08-th.md
@@ -10,8 +10,8 @@ image_metadata:
   credit: ''
   image-alt: Satellite image of Hurricane Katrina off the Gulf coast.
 learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: Satellite image of Hurricane Katrina off the Gulf coast
-type: OCWImage
 uid: a80e8248-0715-e7d2-ec7a-357e0a1d747c
 ---
