--- a/content/resources/1-010f08.md
+++ b/content/resources/1-010f08.md
@@ -10,8 +10,8 @@ image_metadata:
   credit: ''
   image-alt: Satellite image of Hurricane Katrina off the Gulf coast.
 learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: Satellite image of Hurricane Katrina off the Gulf coast
-type: OCWImage
 uid: 7c5e8d87-cb6f-b29f-75ce-8c7b1ae69189
 ---
